--- a/index.html
+++ b/index.html
@@ -28,10 +28,23 @@
             </div>
         </form>
     </header>
-    <main class="page-content">
+    <main class="page-content" id = "page-content">
+        <!-- columns for tasks to do and Kanban board -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do">
+            </ul>
+        </section>
+        <!-- task in progress -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks In Progress</h2>
+            <ul class="task-list" id="tasks-to-progress">
+            </ul>
+        </section>
+        <!-- tasks completed -->
+        <section class="task-list-wrapper">
+            <h2 class="list-title">Tasks Completed</h2>
+            <ul class="task-list" id="tasks-completed">
             </ul>
         </section>
     </main>
