add ability to update and delete tasks

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- task in progress -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks In Progress</h2>
-            <ul class="task-list" id="tasks-to-progress">
+            <ul class="task-list" id="tasks-in-progress">
             </ul>
         </section>
         <!-- tasks completed -->
